// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <script defer="defer"
            src="main.js"
    >
    </script>
    <link href="main.css"
          rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -17,5 +17,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.tqa109z,html.tqa109z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="_144ilsa0 tilamk18 tilamk1b">
+        <div class="_17mn8h20 tqa10976 tqa10966 tqa10996 tqa10986 tqa1095a tilamk18 tilamk1b tqa10932 tqa10935">
+          <span class="_17mn8h20 tqa1094u tilamk0 tilamk1 tilamk21 _1d0g9qk4 tilamkd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._17mn8h20 {
  -webkit-tap-highlight-color: transparent;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}
[data-braid-hidefocusrings] ._17mn8h20 {
  outline: none;
}
._17mn8h21 {
  display: block;
}
._17mn8h22 {
  line-height: 1;
}
._17mn8h23 {
  list-style: none;
}
._17mn8h24 {
  quotes: none;
}
._17mn8h24:after,
._17mn8h24:before {
  content: "";
}
._17mn8h25 {
  border-collapse: collapse;
  border-spacing: 0;
}
._17mn8h26 {
  -webkit-appearance: none;
  appearance: none;
}
._17mn8h27 {
  background-color: transparent;
}
._17mn8h29 {
  color: inherit;
}
._17mn8h2a:disabled {
  opacity: 1;
}
._17mn8h2a::-ms-expand,
._17mn8h2c::-ms-clear {
  display: none;
}
._17mn8h2c::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._17mn8h2f {
  color: inherit;
  text-decoration: none;
}
._1d0g9qk4 {
  font-size: var(--_1d0g9qk0);
  line-height: var(--_1d0g9qk1);
}
._1d0g9qk4:before {
  content: "";
  display: table;
  margin-bottom: var(--_1d0g9qk2);
}
._1d0g9qk4:after {
  content: "";
  display: table;
  margin-top: var(--_1d0g9qk3);
}
.tqa1090 {
  overflow: hidden;
}
.tqa1091 {
  overflow: scroll;
}
.tqa1092 {
  overflow: visible;
}
.tqa1093 {
  overflow: auto;
}
.tqa1094 {
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.tqa1095 {
  outline: none;
}
.tqa1096 {
  opacity: 0;
}
.tqa1097 {
  z-index: 0;
}
.tqa1098 {
  z-index: 1;
}
.tqa1099 {
  z-index: 2;
}
.tqa109a {
  z-index: 90;
}
.tqa109b {
  z-index: 100;
}
.tqa109c {
  z-index: 200;
}
.tqa109d {
  z-index: 290;
}
.tqa109e {
  z-index: 300;
}
.tqa109f {
  z-index: 400;
}
.tqa109g {
  cursor: default;
}
.tqa109h {
  cursor: pointer;
}
.tqa109i {
  pointer-events: none;
}
.tqa109j {
  top: 0;
}
.tqa109k {
  bottom: 0;
}
.tqa109l {
  left: 0;
}
.tqa109m {
  right: 0;
}
.tqa109n {
  height: 100%;
}
.tqa109o {
  height: var(--_1th2mrq8);
}
.tqa109p {
  width: 100%;
}
.tqa109q {
  width: var(--_1th2mrq8);
}
.tqa109r {
  min-width: 0;
}
.tqa109s {
  max-width: var(--_1th2mrqz);
}
.tqa109t {
  max-width: var(--_1th2mrq10);
}
.tqa109u {
  max-width: var(--_1th2mrq11);
}
.tqa109v {
  max-width: var(--_1th2mrq12);
}
.tqa109w {
  transition: var(--_1th2mrq5f);
}
.tqa109x {
  transition: var(--_1th2mrq5g);
}
.tqa109y:active {
  transform: var(--_1th2mrq5h);
}
html.tqa109z .tqa10911,
html:not(.tqa109z) .tqa10910 {
  background: var(--_1th2mrq1r);
}
html.tqa109z .tqa10913,
html:not(.tqa109z) .tqa10912 {
  background: var(--_1th2mrq1s);
}
html.tqa109z .tqa10915,
html:not(.tqa109z) .tqa10914 {
  background: var(--_1th2mrq1t);
}
html.tqa109z .tqa10917,
html:not(.tqa109z) .tqa10916 {
  background: var(--_1th2mrq1u);
}
html.tqa109z .tqa10919,
html:not(.tqa109z) .tqa10918 {
  background: var(--_1th2mrq1v);
}
html.tqa109z .tqa1091b,
html:not(.tqa109z) .tqa1091a {
  background: var(--_1th2mrq1w);
}
html.tqa109z .tqa1091d,
html:not(.tqa109z) .tqa1091c {
  background: var(--_1th2mrq1x);
}
html.tqa109z .tqa1091f,
html:not(.tqa109z) .tqa1091e {
  background: var(--_1th2mrq1y);
}
html.tqa109z .tqa1091h,
html:not(.tqa109z) .tqa1091g {
  background: var(--_1th2mrq1z);
}
html.tqa109z .tqa1091j,
html:not(.tqa109z) .tqa1091i {
  background: var(--_1th2mrq20);
}
html.tqa109z .tqa1091l,
html:not(.tqa109z) .tqa1091k {
  background: var(--_1th2mrq21);
}
html.tqa109z .tqa1091n,
html:not(.tqa109z) .tqa1091m {
  background: var(--_1th2mrq22);
}
html.tqa109z .tqa1091p,
html:not(.tqa109z) .tqa1091o {
  background: var(--_1th2mrq23);
}
html.tqa109z .tqa1091r,
html:not(.tqa109z) .tqa1091q {
  background: var(--_1th2mrq24);
}
html.tqa109z .tqa1091t,
html:not(.tqa109z) .tqa1091s {
  background: var(--_1th2mrq25);
}
html.tqa109z .tqa1091v,
html:not(.tqa109z) .tqa1091u {
  background: var(--_1th2mrq26);
}
html.tqa109z .tqa1091x,
html:not(.tqa109z) .tqa1091w {
  background: var(--_1th2mrq27);
}
html.tqa109z .tqa1091z,
html:not(.tqa109z) .tqa1091y {
  background: var(--_1th2mrq28);
}
html.tqa109z .tqa10921,
html:not(.tqa109z) .tqa10920 {
  background: var(--_1th2mrq29);
}
html.tqa109z .tqa10923,
html:not(.tqa109z) .tqa10922 {
  background: var(--_1th2mrq2a);
}
html.tqa109z .tqa10925,
html:not(.tqa109z) .tqa10924 {
  background: var(--_1th2mrq2b);
}
html.tqa109z .tqa10927,
html:not(.tqa109z) .tqa10926 {
  background: var(--_1th2mrq2c);
}
html.tqa109z .tqa10929,
html:not(.tqa109z) .tqa10928 {
  background: var(--_1th2mrq2d);
}
html.tqa109z .tqa1092b,
html:not(.tqa109z) .tqa1092a {
  background: var(--_1th2mrq2e);
}
html.tqa109z .tqa1092d,
html:not(.tqa109z) .tqa1092c {
  background: var(--_1th2mrq2f);
}
html.tqa109z .tqa1092f,
html:not(.tqa109z) .tqa1092e {
  background: var(--_1th2mrq2g);
}
html.tqa109z .tqa1092h,
html:not(.tqa109z) .tqa1092g {
  background: var(--_1th2mrq2h);
}
html.tqa109z .tqa1092j,
html:not(.tqa109z) .tqa1092i {
  background: var(--_1th2mrq2i);
}
html.tqa109z .tqa1092l,
html:not(.tqa109z) .tqa1092k {
  background: var(--_1th2mrq2j);
}
html.tqa109z .tqa1092n,
html:not(.tqa109z) .tqa1092m {
  background: var(--_1th2mrq2k);
}
html.tqa109z .tqa1092p,
html:not(.tqa109z) .tqa1092o {
  background: var(--_1th2mrq2l);
}
html.tqa109z .tqa1092r,
html:not(.tqa109z) .tqa1092q {
  background: var(--_1th2mrq2m);
}
html.tqa109z .tqa1092t,
html:not(.tqa109z) .tqa1092s {
  background: var(--_1th2mrq2n);
}
html.tqa109z .tqa1092v,
html:not(.tqa109z) .tqa1092u {
  background: var(--_1th2mrq2o);
}
html.tqa109z .tqa1092x,
html:not(.tqa109z) .tqa1092w {
  background: var(--_1th2mrq2p);
}
html.tqa109z .tqa1092z,
html:not(.tqa109z) .tqa1092y {
  background: var(--_1th2mrq2q);
}
html.tqa109z .tqa10931,
html:not(.tqa109z) .tqa10930 {
  background: var(--_1th2mrq2r);
}
html.tqa109z .tqa10933,
html:not(.tqa109z) .tqa10932 {
  background: var(--_1th2mrq2s);
}
html.tqa109z .tqa10935,
html:not(.tqa109z) .tqa10934 {
  background: var(--_1th2mrq2t);
}
html.tqa109z .tqa10937,
html:not(.tqa109z) .tqa10936 {
  box-shadow: var(--_1th2mrq5i);
}
html.tqa109z .tqa10939,
html:not(.tqa109z) .tqa10938 {
  box-shadow: var(--_1th2mrq5j);
}
html.tqa109z .tqa1093b,
html:not(.tqa109z) .tqa1093a {
  box-shadow: var(--_1th2mrq5k);
}
html.tqa109z .tqa1093d,
html:not(.tqa109z) .tqa1093c {
  box-shadow: inset 0 0 0 var(--_1th2mrqx) var(--_1th2mrqd);
}
html.tqa109z .tqa1093f,
html:not(.tqa109z) .tqa1093e {
  box-shadow: inset 0 0 0 var(--_1th2mrqx) var(--_1th2mrqe);
}
html.tqa109z .tqa1093h,
html:not(.tqa109z) .tqa1093g {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqf);
}
html.tqa109z .tqa1093j,
html:not(.tqa109z) .tqa1093i {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqg);
}
html.tqa109z .tqa1093l,
html:not(.tqa109z) .tqa1093k {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqh);
}
html.tqa109z .tqa1093n,
html:not(.tqa109z) .tqa1093m {
  box-shadow: inset 0 0 0 var(--_1th2mrqx) var(--_1th2mrqh);
}
html.tqa109z .tqa1093p,
html:not(.tqa109z) .tqa1093o {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqi);
}
html.tqa109z .tqa1093r,
html:not(.tqa109z) .tqa1093q {
  box-shadow: inset 0 0 0 var(--_1th2mrqx) var(--_1th2mrqi);
}
html.tqa109z .tqa1093t,
html:not(.tqa109z) .tqa1093s {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqj);
}
html.tqa109z .tqa1093v,
html:not(.tqa109z) .tqa1093u {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrql);
}
html.tqa109z .tqa1093x,
html:not(.tqa109z) .tqa1093w {
  box-shadow: inset 0 0 0 var(--_1th2mrqx) var(--_1th2mrql);
}
html.tqa109z .tqa1093z,
html:not(.tqa109z) .tqa1093y {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqm);
}
html.tqa109z .tqa10941,
html:not(.tqa109z) .tqa10940 {
  box-shadow: inset 0 0 0 var(--_1th2mrqx) var(--_1th2mrqm);
}
html.tqa109z .tqa10943,
html:not(.tqa109z) .tqa10942 {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqn);
}
html.tqa109z .tqa10945,
html:not(.tqa109z) .tqa10944 {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqo);
}
html.tqa109z .tqa10947,
html:not(.tqa109z) .tqa10946 {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqp);
}
html.tqa109z .tqa10949,
html:not(.tqa109z) .tqa10948 {
  box-shadow: inset 0 0 0 var(--_1th2mrqx) var(--_1th2mrqp);
}
html.tqa109z .tqa1094b,
html:not(.tqa109z) .tqa1094a {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqq);
}
html.tqa109z .tqa1094d,
html:not(.tqa109z) .tqa1094c {
  box-shadow: inset 0 0 0 var(--_1th2mrqx) var(--_1th2mrqq);
}
html.tqa109z .tqa1094f,
html:not(.tqa109z) .tqa1094e {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqr);
}
html.tqa109z .tqa1094h,
html:not(.tqa109z) .tqa1094g {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqs);
}
html.tqa109z .tqa1094j,
html:not(.tqa109z) .tqa1094i {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqt);
}
html.tqa109z .tqa1094l,
html:not(.tqa109z) .tqa1094k {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqu);
}
html.tqa109z .tqa1094n,
html:not(.tqa109z) .tqa1094m {
  box-shadow: inset 0 0 0 var(--_1th2mrqw) var(--_1th2mrqv);
}
html.tqa109z .tqa1094p,
html:not(.tqa109z) .tqa1094o {
  box-shadow: 0 0 0 var(--_1th2mrqy) var(--_1th2mrqk);
}
.tqa1094q {
  display: none;
}
.tqa1094u {
  display: block;
}
.tqa1094y {
  display: inline;
}
.tqa10952 {
  display: inline-block;
}
.tqa10956 {
  display: flex;
}
.tqa1095a {
  position: relative;
}
.tqa1095e {
  position: absolute;
}
.tqa1095i {
  position: fixed;
}
.tqa1095m {
  border-radius: 0;
}
.tqa1095q {
  border-radius: 9999px;
}
.tqa1095u {
  border-radius: var(--_1th2mrqa);
}
.tqa1095y {
  border-radius: var(--_1th2mrqb);
}
.tqa10962 {
  border-radius: var(--_1th2mrqc);
}
.tqa10966 {
  padding-top: var(--_1th2mrq0);
}
.tqa1096a {
  padding-top: var(--_1th2mrq1);
}
.tqa1096e {
  padding-top: var(--_1th2mrq2);
}
.tqa1096i {
  padding-top: var(--_1th2mrq3);
}
.tqa1096m {
  padding-top: var(--_1th2mrq4);
}
.tqa1096q {
  padding-top: var(--_1th2mrq5);
}
.tqa1096u {
  padding-top: var(--_1th2mrq6);
}
.tqa1096y {
  padding-top: var(--_1th2mrq7);
}
.tqa10972 {
  padding-top: 0;
}
.tqa10976 {
  padding-bottom: var(--_1th2mrq0);
}
.tqa1097a {
  padding-bottom: var(--_1th2mrq1);
}
.tqa1097e {
  padding-bottom: var(--_1th2mrq2);
}
.tqa1097i {
  padding-bottom: var(--_1th2mrq3);
}
.tqa1097m {
  padding-bottom: var(--_1th2mrq4);
}
.tqa1097q {
  padding-bottom: var(--_1th2mrq5);
}
.tqa1097u {
  padding-bottom: var(--_1th2mrq6);
}
.tqa1097y {
  padding-bottom: var(--_1th2mrq7);
}
.tqa10982 {
  padding-bottom: 0;
}
.tqa10986 {
  padding-right: var(--_1th2mrq0);
}
.tqa1098a {
  padding-right: var(--_1th2mrq1);
}
.tqa1098e {
  padding-right: var(--_1th2mrq2);
}
.tqa1098i {
  padding-right: var(--_1th2mrq3);
}
.tqa1098m {
  padding-right: var(--_1th2mrq4);
}
.tqa1098q {
  padding-right: var(--_1th2mrq5);
}
.tqa1098u {
  padding-right: var(--_1th2mrq6);
}
.tqa1098y {
  padding-right: var(--_1th2mrq7);
}
.tqa10992 {
  padding-right: 0;
}
.tqa10996 {
  padding-left: var(--_1th2mrq0);
}
.tqa1099a {
  padding-left: var(--_1th2mrq1);
}
.tqa1099e {
  padding-left: var(--_1th2mrq2);
}
.tqa1099i {
  padding-left: var(--_1th2mrq3);
}
.tqa1099m {
  padding-left: var(--_1th2mrq4);
}
.tqa1099q {
  padding-left: var(--_1th2mrq5);
}
.tqa1099u {
  padding-left: var(--_1th2mrq6);
}
.tqa1099y {
  padding-left: var(--_1th2mrq7);
}
.tqa109a2 {
  padding-left: 0;
}
.tqa109a6 {
  margin-top: var(--_1th2mrq0);
}
.tqa109aa {
  margin-top: var(--_1th2mrq1);
}
.tqa109ae {
  margin-top: var(--_1th2mrq2);
}
.tqa109ai {
  margin-top: var(--_1th2mrq3);
}
.tqa109am {
  margin-top: var(--_1th2mrq4);
}
.tqa109aq {
  margin-top: var(--_1th2mrq5);
}
.tqa109au {
  margin-top: var(--_1th2mrq6);
}
.tqa109ay {
  margin-top: var(--_1th2mrq7);
}
.tqa109b2 {
  margin-top: 0;
}
.tqa109b6 {
  margin-bottom: var(--_1th2mrq0);
}
.tqa109ba {
  margin-bottom: var(--_1th2mrq1);
}
.tqa109be {
  margin-bottom: var(--_1th2mrq2);
}
.tqa109bi {
  margin-bottom: var(--_1th2mrq3);
}
.tqa109bm {
  margin-bottom: var(--_1th2mrq4);
}
.tqa109bq {
  margin-bottom: var(--_1th2mrq5);
}
.tqa109bu {
  margin-bottom: var(--_1th2mrq6);
}
.tqa109by {
  margin-bottom: var(--_1th2mrq7);
}
.tqa109c2 {
  margin-bottom: 0;
}
.tqa109c6 {
  margin-right: var(--_1th2mrq0);
}
.tqa109ca {
  margin-right: var(--_1th2mrq1);
}
.tqa109ce {
  margin-right: var(--_1th2mrq2);
}
.tqa109ci {
  margin-right: var(--_1th2mrq3);
}
.tqa109cm {
  margin-right: var(--_1th2mrq4);
}
.tqa109cq {
  margin-right: var(--_1th2mrq5);
}
.tqa109cu {
  margin-right: var(--_1th2mrq6);
}
.tqa109cy {
  margin-right: var(--_1th2mrq7);
}
.tqa109d2 {
  margin-right: 0;
}
.tqa109d6 {
  margin-left: var(--_1th2mrq0);
}
.tqa109da {
  margin-left: var(--_1th2mrq1);
}
.tqa109de {
  margin-left: var(--_1th2mrq2);
}
.tqa109di {
  margin-left: var(--_1th2mrq3);
}
.tqa109dm {
  margin-left: var(--_1th2mrq4);
}
.tqa109dq {
  margin-left: var(--_1th2mrq5);
}
.tqa109du {
  margin-left: var(--_1th2mrq6);
}
.tqa109dy {
  margin-left: var(--_1th2mrq7);
}
.tqa109e2 {
  margin-left: 0;
}
.tqa109e6 {
  align-items: flex-start;
}
.tqa109ea {
  align-items: center;
}
.tqa109ee {
  align-items: flex-end;
}
.tqa109ei {
  justify-content: flex-start;
}
.tqa109em {
  justify-content: center;
}
.tqa109eq {
  justify-content: flex-end;
}
.tqa109eu {
  justify-content: space-between;
}
.tqa109ey {
  flex-direction: row;
}
.tqa109f2 {
  flex-direction: row-reverse;
}
.tqa109f6 {
  flex-direction: column;
}
.tqa109fa {
  flex-direction: column-reverse;
}
.tqa109fe {
  flex-wrap: wrap;
}
.tqa109fi {
  flex-wrap: nowrap;
}
.tqa109fm {
  flex-shrink: 0;
}
.tqa109fq {
  flex-grow: 0;
}
.tqa109fu {
  flex-grow: 1;
}
.tqa109fy {
  text-align: left;
}
.tqa109g2 {
  text-align: center;
}
.tqa109g6 {
  text-align: right;
}
@media screen and (min-width: 740px) {
  .tqa1094r {
    display: none;
  }
  .tqa1094v {
    display: block;
  }
  .tqa1094z {
    display: inline;
  }
  .tqa10953 {
    display: inline-block;
  }
  .tqa10957 {
    display: flex;
  }
  .tqa1095b {
    position: relative;
  }
  .tqa1095f {
    position: absolute;
  }
  .tqa1095j {
    position: fixed;
  }
  .tqa1095n {
    border-radius: 0;
  }
  .tqa1095r {
    border-radius: 9999px;
  }
  .tqa1095v {
    border-radius: var(--_1th2mrqa);
  }
  .tqa1095z {
    border-radius: var(--_1th2mrqb);
  }
  .tqa10963 {
    border-radius: var(--_1th2mrqc);
  }
  .tqa10967 {
    padding-top: var(--_1th2mrq0);
  }
  .tqa1096b {
    padding-top: var(--_1th2mrq1);
  }
  .tqa1096f {
    padding-top: var(--_1th2mrq2);
  }
  .tqa1096j {
    padding-top: var(--_1th2mrq3);
  }
  .tqa1096n {
    padding-top: var(--_1th2mrq4);
  }
  .tqa1096r {
    padding-top: var(--_1th2mrq5);
  }
  .tqa1096v {
    padding-top: var(--_1th2mrq6);
  }
  .tqa1096z {
    padding-top: var(--_1th2mrq7);
  }
  .tqa10973 {
    padding-top: 0;
  }
  .tqa10977 {
    padding-bottom: var(--_1th2mrq0);
  }
  .tqa1097b {
    padding-bottom: var(--_1th2mrq1);
  }
  .tqa1097f {
    padding-bottom: var(--_1th2mrq2);
  }
  .tqa1097j {
    padding-bottom: var(--_1th2mrq3);
  }
  .tqa1097n {
    padding-bottom: var(--_1th2mrq4);
  }
  .tqa1097r {
    padding-bottom: var(--_1th2mrq5);
  }
  .tqa1097v {
    padding-bottom: var(--_1th2mrq6);
  }
  .tqa1097z {
    padding-bottom: var(--_1th2mrq7);
  }
  .tqa10983 {
    padding-bottom: 0;
  }
  .tqa10987 {
    padding-right: var(--_1th2mrq0);
  }
  .tqa1098b {
    padding-right: var(--_1th2mrq1);
  }
  .tqa1098f {
    padding-right: var(--_1th2mrq2);
  }
  .tqa1098j {
    padding-right: var(--_1th2mrq3);
  }
  .tqa1098n {
    padding-right: var(--_1th2mrq4);
  }
  .tqa1098r {
    padding-right: var(--_1th2mrq5);
  }
  .tqa1098v {
    padding-right: var(--_1th2mrq6);
  }
  .tqa1098z {
    padding-right: var(--_1th2mrq7);
  }
  .tqa10993 {
    padding-right: 0;
  }
  .tqa10997 {
    padding-left: var(--_1th2mrq0);
  }
  .tqa1099b {
    padding-left: var(--_1th2mrq1);
  }
  .tqa1099f {
    padding-left: var(--_1th2mrq2);
  }
  .tqa1099j {
    padding-left: var(--_1th2mrq3);
  }
  .tqa1099n {
    padding-left: var(--_1th2mrq4);
  }
  .tqa1099r {
    padding-left: var(--_1th2mrq5);
  }
  .tqa1099v {
    padding-left: var(--_1th2mrq6);
  }
  .tqa1099z {
    padding-left: var(--_1th2mrq7);
  }
  .tqa109a3 {
    padding-left: 0;
  }
  .tqa109a7 {
    margin-top: var(--_1th2mrq0);
  }
  .tqa109ab {
    margin-top: var(--_1th2mrq1);
  }
  .tqa109af {
    margin-top: var(--_1th2mrq2);
  }
  .tqa109aj {
    margin-top: var(--_1th2mrq3);
  }
  .tqa109an {
    margin-top: var(--_1th2mrq4);
  }
  .tqa109ar {
    margin-top: var(--_1th2mrq5);
  }
  .tqa109av {
    margin-top: var(--_1th2mrq6);
  }
  .tqa109az {
    margin-top: var(--_1th2mrq7);
  }
  .tqa109b3 {
    margin-top: 0;
  }
  .tqa109b7 {
    margin-bottom: var(--_1th2mrq0);
  }
  .tqa109bb {
    margin-bottom: var(--_1th2mrq1);
  }
  .tqa109bf {
    margin-bottom: var(--_1th2mrq2);
  }
  .tqa109bj {
    margin-bottom: var(--_1th2mrq3);
  }
  .tqa109bn {
    margin-bottom: var(--_1th2mrq4);
  }
  .tqa109br {
    margin-bottom: var(--_1th2mrq5);
  }
  .tqa109bv {
    margin-bottom: var(--_1th2mrq6);
  }
  .tqa109bz {
    margin-bottom: var(--_1th2mrq7);
  }
  .tqa109c3 {
    margin-bottom: 0;
  }
  .tqa109c7 {
    margin-right: var(--_1th2mrq0);
  }
  .tqa109cb {
    margin-right: var(--_1th2mrq1);
  }
  .tqa109cf {
    margin-right: var(--_1th2mrq2);
  }
  .tqa109cj {
    margin-right: var(--_1th2mrq3);
  }
  .tqa109cn {
    margin-right: var(--_1th2mrq4);
  }
  .tqa109cr {
    margin-right: var(--_1th2mrq5);
  }
  .tqa109cv {
    margin-right: var(--_1th2mrq6);
  }
  .tqa109cz {
    margin-right: var(--_1th2mrq7);
  }
  .tqa109d3 {
    margin-right: 0;
  }
  .tqa109d7 {
    margin-left: var(--_1th2mrq0);
  }
  .tqa109db {
    margin-left: var(--_1th2mrq1);
  }
  .tqa109df {
    margin-left: var(--_1th2mrq2);
  }
  .tqa109dj {
    margin-left: var(--_1th2mrq3);
  }
  .tqa109dn {
    margin-left: var(--_1th2mrq4);
  }
  .tqa109dr {
    margin-left: var(--_1th2mrq5);
  }
  .tqa109dv {
    margin-left: var(--_1th2mrq6);
  }
  .tqa109dz {
    margin-left: var(--_1th2mrq7);
  }
  .tqa109e3 {
    margin-left: 0;
  }
  .tqa109e7 {
    align-items: flex-start;
  }
  .tqa109eb {
    align-items: center;
  }
  .tqa109ef {
    align-items: flex-end;
  }
  .tqa109ej {
    justify-content: flex-start;
  }
  .tqa109en {
    justify-content: center;
  }
  .tqa109er {
    justify-content: flex-end;
  }
  .tqa109ev {
    justify-content: space-between;
  }
  .tqa109ez {
    flex-direction: row;
  }
  .tqa109f3 {
    flex-direction: row-reverse;
  }
  .tqa109f7 {
    flex-direction: column;
  }
  .tqa109fb {
    flex-direction: column-reverse;
  }
  .tqa109ff {
    flex-wrap: wrap;
  }
  .tqa109fj {
    flex-wrap: nowrap;
  }
  .tqa109fn {
    flex-shrink: 0;
  }
  .tqa109fr {
    flex-grow: 0;
  }
  .tqa109fv {
    flex-grow: 1;
  }
  .tqa109fz {
    text-align: left;
  }
  .tqa109g3 {
    text-align: center;
  }
  .tqa109g7 {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  .tqa1094s {
    display: none;
  }
  .tqa1094w {
    display: block;
  }
  .tqa10950 {
    display: inline;
  }
  .tqa10954 {
    display: inline-block;
  }
  .tqa10958 {
    display: flex;
  }
  .tqa1095c {
    position: relative;
  }
  .tqa1095g {
    position: absolute;
  }
  .tqa1095k {
    position: fixed;
  }
  .tqa1095o {
    border-radius: 0;
  }
  .tqa1095s {
    border-radius: 9999px;
  }
  .tqa1095w {
    border-radius: var(--_1th2mrqa);
  }
  .tqa10960 {
    border-radius: var(--_1th2mrqb);
  }
  .tqa10964 {
    border-radius: var(--_1th2mrqc);
  }
  .tqa10968 {
    padding-top: var(--_1th2mrq0);
  }
  .tqa1096c {
    padding-top: var(--_1th2mrq1);
  }
  .tqa1096g {
    padding-top: var(--_1th2mrq2);
  }
  .tqa1096k {
    padding-top: var(--_1th2mrq3);
  }
  .tqa1096o {
    padding-top: var(--_1th2mrq4);
  }
  .tqa1096s {
    padding-top: var(--_1th2mrq5);
  }
  .tqa1096w {
    padding-top: var(--_1th2mrq6);
  }
  .tqa10970 {
    padding-top: var(--_1th2mrq7);
  }
  .tqa10974 {
    padding-top: 0;
  }
  .tqa10978 {
    padding-bottom: var(--_1th2mrq0);
  }
  .tqa1097c {
    padding-bottom: var(--_1th2mrq1);
  }
  .tqa1097g {
    padding-bottom: var(--_1th2mrq2);
  }
  .tqa1097k {
    padding-bottom: var(--_1th2mrq3);
  }
  .tqa1097o {
    padding-bottom: var(--_1th2mrq4);
  }
  .tqa1097s {
    padding-bottom: var(--_1th2mrq5);
  }
  .tqa1097w {
    padding-bottom: var(--_1th2mrq6);
  }
  .tqa10980 {
    padding-bottom: var(--_1th2mrq7);
  }
  .tqa10984 {
    padding-bottom: 0;
  }
  .tqa10988 {
    padding-right: var(--_1th2mrq0);
  }
  .tqa1098c {
    padding-right: var(--_1th2mrq1);
  }
  .tqa1098g {
    padding-right: var(--_1th2mrq2);
  }
  .tqa1098k {
    padding-right: var(--_1th2mrq3);
  }
  .tqa1098o {
    padding-right: var(--_1th2mrq4);
  }
  .tqa1098s {
    padding-right: var(--_1th2mrq5);
  }
  .tqa1098w {
    padding-right: var(--_1th2mrq6);
  }
  .tqa10990 {
    padding-right: var(--_1th2mrq7);
  }
  .tqa10994 {
    padding-right: 0;
  }
  .tqa10998 {
    padding-left: var(--_1th2mrq0);
  }
  .tqa1099c {
    padding-left: var(--_1th2mrq1);
  }
  .tqa1099g {
    padding-left: var(--_1th2mrq2);
  }
  .tqa1099k {
    padding-left: var(--_1th2mrq3);
  }
  .tqa1099o {
    padding-left: var(--_1th2mrq4);
  }
  .tqa1099s {
    padding-left: var(--_1th2mrq5);
  }
  .tqa1099w {
    padding-left: var(--_1th2mrq6);
  }
  .tqa109a0 {
    padding-left: var(--_1th2mrq7);
  }
  .tqa109a4 {
    padding-left: 0;
  }
  .tqa109a8 {
    margin-top: var(--_1th2mrq0);
  }
  .tqa109ac {
    margin-top: var(--_1th2mrq1);
  }
  .tqa109ag {
    margin-top: var(--_1th2mrq2);
  }
  .tqa109ak {
    margin-top: var(--_1th2mrq3);
  }
  .tqa109ao {
    margin-top: var(--_1th2mrq4);
  }
  .tqa109as {
    margin-top: var(--_1th2mrq5);
  }
  .tqa109aw {
    margin-top: var(--_1th2mrq6);
  }
  .tqa109b0 {
    margin-top: var(--_1th2mrq7);
  }
  .tqa109b4 {
    margin-top: 0;
  }
  .tqa109b8 {
    margin-bottom: var(--_1th2mrq0);
  }
  .tqa109bc {
    margin-bottom: var(--_1th2mrq1);
  }
  .tqa109bg {
    margin-bottom: var(--_1th2mrq2);
  }
  .tqa109bk {
    margin-bottom: var(--_1th2mrq3);
  }
  .tqa109bo {
    margin-bottom: var(--_1th2mrq4);
  }
  .tqa109bs {
    margin-bottom: var(--_1th2mrq5);
  }
  .tqa109bw {
    margin-bottom: var(--_1th2mrq6);
  }
  .tqa109c0 {
    margin-bottom: var(--_1th2mrq7);
  }
  .tqa109c4 {
    margin-bottom: 0;
  }
  .tqa109c8 {
    margin-right: var(--_1th2mrq0);
  }
  .tqa109cc {
    margin-right: var(--_1th2mrq1);
  }
  .tqa109cg {
    margin-right: var(--_1th2mrq2);
  }
  .tqa109ck {
    margin-right: var(--_1th2mrq3);
  }
  .tqa109co {
    margin-right: var(--_1th2mrq4);
  }
  .tqa109cs {
    margin-right: var(--_1th2mrq5);
  }
  .tqa109cw {
    margin-right: var(--_1th2mrq6);
  }
  .tqa109d0 {
    margin-right: var(--_1th2mrq7);
  }
  .tqa109d4 {
    margin-right: 0;
  }
  .tqa109d8 {
    margin-left: var(--_1th2mrq0);
  }
  .tqa109dc {
    margin-left: var(--_1th2mrq1);
  }
  .tqa109dg {
    margin-left: var(--_1th2mrq2);
  }
  .tqa109dk {
    margin-left: var(--_1th2mrq3);
  }
  .tqa109do {
    margin-left: var(--_1th2mrq4);
  }
  .tqa109ds {
    margin-left: var(--_1th2mrq5);
  }
  .tqa109dw {
    margin-left: var(--_1th2mrq6);
  }
  .tqa109e0 {
    margin-left: var(--_1th2mrq7);
  }
  .tqa109e4 {
    margin-left: 0;
  }
  .tqa109e8 {
    align-items: flex-start;
  }
  .tqa109ec {
    align-items: center;
  }
  .tqa109eg {
    align-items: flex-end;
  }
  .tqa109ek {
    justify-content: flex-start;
  }
  .tqa109eo {
    justify-content: center;
  }
  .tqa109es {
    justify-content: flex-end;
  }
  .tqa109ew {
    justify-content: space-between;
  }
  .tqa109f0 {
    flex-direction: row;
  }
  .tqa109f4 {
    flex-direction: row-reverse;
  }
  .tqa109f8 {
    flex-direction: column;
  }
  .tqa109fc {
    flex-direction: column-reverse;
  }
  .tqa109fg {
    flex-wrap: wrap;
  }
  .tqa109fk {
    flex-wrap: nowrap;
  }
  .tqa109fo {
    flex-shrink: 0;
  }
  .tqa109fs {
    flex-grow: 0;
  }
  .tqa109fw {
    flex-grow: 1;
  }
  .tqa109g0 {
    text-align: left;
  }
  .tqa109g4 {
    text-align: center;
  }
  .tqa109g8 {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  .tqa1094t {
    display: none;
  }
  .tqa1094x {
    display: block;
  }
  .tqa10951 {
    display: inline;
  }
  .tqa10955 {
    display: inline-block;
  }
  .tqa10959 {
    display: flex;
  }
  .tqa1095d {
    position: relative;
  }
  .tqa1095h {
    position: absolute;
  }
  .tqa1095l {
    position: fixed;
  }
  .tqa1095p {
    border-radius: 0;
  }
  .tqa1095t {
    border-radius: 9999px;
  }
  .tqa1095x {
    border-radius: var(--_1th2mrqa);
  }
  .tqa10961 {
    border-radius: var(--_1th2mrqb);
  }
  .tqa10965 {
    border-radius: var(--_1th2mrqc);
  }
  .tqa10969 {
    padding-top: var(--_1th2mrq0);
  }
  .tqa1096d {
    padding-top: var(--_1th2mrq1);
  }
  .tqa1096h {
    padding-top: var(--_1th2mrq2);
  }
  .tqa1096l {
    padding-top: var(--_1th2mrq3);
  }
  .tqa1096p {
    padding-top: var(--_1th2mrq4);
  }
  .tqa1096t {
    padding-top: var(--_1th2mrq5);
  }
  .tqa1096x {
    padding-top: var(--_1th2mrq6);
  }
  .tqa10971 {
    padding-top: var(--_1th2mrq7);
  }
  .tqa10975 {
    padding-top: 0;
  }
  .tqa10979 {
    padding-bottom: var(--_1th2mrq0);
  }
  .tqa1097d {
    padding-bottom: var(--_1th2mrq1);
  }
  .tqa1097h {
    padding-bottom: var(--_1th2mrq2);
  }
  .tqa1097l {
    padding-bottom: var(--_1th2mrq3);
  }
  .tqa1097p {
    padding-bottom: var(--_1th2mrq4);
  }
  .tqa1097t {
    padding-bottom: var(--_1th2mrq5);
  }
  .tqa1097x {
    padding-bottom: var(--_1th2mrq6);
  }
  .tqa10981 {
    padding-bottom: var(--_1th2mrq7);
  }
  .tqa10985 {
    padding-bottom: 0;
  }
  .tqa10989 {
    padding-right: var(--_1th2mrq0);
  }
  .tqa1098d {
    padding-right: var(--_1th2mrq1);
  }
  .tqa1098h {
    padding-right: var(--_1th2mrq2);
  }
  .tqa1098l {
    padding-right: var(--_1th2mrq3);
  }
  .tqa1098p {
    padding-right: var(--_1th2mrq4);
  }
  .tqa1098t {
    padding-right: var(--_1th2mrq5);
  }
  .tqa1098x {
    padding-right: var(--_1th2mrq6);
  }
  .tqa10991 {
    padding-right: var(--_1th2mrq7);
  }
  .tqa10995 {
    padding-right: 0;
  }
  .tqa10999 {
    padding-left: var(--_1th2mrq0);
  }
  .tqa1099d {
    padding-left: var(--_1th2mrq1);
  }
  .tqa1099h {
    padding-left: var(--_1th2mrq2);
  }
  .tqa1099l {
    padding-left: var(--_1th2mrq3);
  }
  .tqa1099p {
    padding-left: var(--_1th2mrq4);
  }
  .tqa1099t {
    padding-left: var(--_1th2mrq5);
  }
  .tqa1099x {
    padding-left: var(--_1th2mrq6);
  }
  .tqa109a1 {
    padding-left: var(--_1th2mrq7);
  }
  .tqa109a5 {
    padding-left: 0;
  }
  .tqa109a9 {
    margin-top: var(--_1th2mrq0);
  }
  .tqa109ad {
    margin-top: var(--_1th2mrq1);
  }
  .tqa109ah {
    margin-top: var(--_1th2mrq2);
  }
  .tqa109al {
    margin-top: var(--_1th2mrq3);
  }
  .tqa109ap {
    margin-top: var(--_1th2mrq4);
  }
  .tqa109at {
    margin-top: var(--_1th2mrq5);
  }
  .tqa109ax {
    margin-top: var(--_1th2mrq6);
  }
  .tqa109b1 {
    margin-top: var(--_1th2mrq7);
  }
  .tqa109b5 {
    margin-top: 0;
  }
  .tqa109b9 {
    margin-bottom: var(--_1th2mrq0);
  }
  .tqa109bd {
    margin-bottom: var(--_1th2mrq1);
  }
  .tqa109bh {
    margin-bottom: var(--_1th2mrq2);
  }
  .tqa109bl {
    margin-bottom: var(--_1th2mrq3);
  }
  .tqa109bp {
    margin-bottom: var(--_1th2mrq4);
  }
  .tqa109bt {
    margin-bottom: var(--_1th2mrq5);
  }
  .tqa109bx {
    margin-bottom: var(--_1th2mrq6);
  }
  .tqa109c1 {
    margin-bottom: var(--_1th2mrq7);
  }
  .tqa109c5 {
    margin-bottom: 0;
  }
  .tqa109c9 {
    margin-right: var(--_1th2mrq0);
  }
  .tqa109cd {
    margin-right: var(--_1th2mrq1);
  }
  .tqa109ch {
    margin-right: var(--_1th2mrq2);
  }
  .tqa109cl {
    margin-right: var(--_1th2mrq3);
  }
  .tqa109cp {
    margin-right: var(--_1th2mrq4);
  }
  .tqa109ct {
    margin-right: var(--_1th2mrq5);
  }
  .tqa109cx {
    margin-right: var(--_1th2mrq6);
  }
  .tqa109d1 {
    margin-right: var(--_1th2mrq7);
  }
  .tqa109d5 {
    margin-right: 0;
  }
  .tqa109d9 {
    margin-left: var(--_1th2mrq0);
  }
  .tqa109dd {
    margin-left: var(--_1th2mrq1);
  }
  .tqa109dh {
    margin-left: var(--_1th2mrq2);
  }
  .tqa109dl {
    margin-left: var(--_1th2mrq3);
  }
  .tqa109dp {
    margin-left: var(--_1th2mrq4);
  }
  .tqa109dt {
    margin-left: var(--_1th2mrq5);
  }
  .tqa109dx {
    margin-left: var(--_1th2mrq6);
  }
  .tqa109e1 {
    margin-left: var(--_1th2mrq7);
  }
  .tqa109e5 {
    margin-left: 0;
  }
  .tqa109e9 {
    align-items: flex-start;
  }
  .tqa109ed {
    align-items: center;
  }
  .tqa109eh {
    align-items: flex-end;
  }
  .tqa109el {
    justify-content: flex-start;
  }
  .tqa109ep {
    justify-content: center;
  }
  .tqa109et {
    justify-content: flex-end;
  }
  .tqa109ex {
    justify-content: space-between;
  }
  .tqa109f1 {
    flex-direction: row;
  }
  .tqa109f5 {
    flex-direction: row-reverse;
  }
  .tqa109f9 {
    flex-direction: column;
  }
  .tqa109fd {
    flex-direction: column-reverse;
  }
  .tqa109fh {
    flex-wrap: wrap;
  }
  .tqa109fl {
    flex-wrap: nowrap;
  }
  .tqa109fp {
    flex-shrink: 0;
  }
  .tqa109ft {
    flex-grow: 0;
  }
  .tqa109fx {
    flex-grow: 1;
  }
  .tqa109g1 {
    text-align: left;
  }
  .tqa109g5 {
    text-align: center;
  }
  .tqa109g9 {
    text-align: right;
  }
}
._144ilsa0 {
  --_1th2mrq0: 24px;
  --_1th2mrq1: 4px;
  --_1th2mrq2: 8px;
  --_1th2mrq3: 12px;
  --_1th2mrq4: 20px;
  --_1th2mrq5: 32px;
  --_1th2mrq6: 48px;
  --_1th2mrq7: 96px;
  --_1th2mrq8: 44px;
  --_1th2mrq9: 4px;
  --_1th2mrqa: 4px;
  --_1th2mrqb: 6px;
  --_1th2mrqc: 10px;
  --_1th2mrqd: #e60278;
  --_1th2mrqe: #f8b1dc;
  --_1th2mrqf: #fdc221;
  --_1th2mrqg: #fee384;
  --_1th2mrqh: #b91e1e;
  --_1th2mrqi: #fb999a;
  --_1th2mrqj: #838fa5;
  --_1th2mrqk: rgba(159, 176, 245, 0.7);
  --_1th2mrql: #4964e9;
  --_1th2mrqm: #9fb0f5;
  --_1th2mrqn: #1d559d;
  --_1th2mrqo: #98c9f1;
  --_1th2mrqp: #2e3849;
  --_1th2mrqr: #d2d7df;
  --_1th2mrqq: #fff;
  --_1th2mrqs: #12784f;
  --_1th2mrqt: #8bdec5;
  --_1th2mrqu: #512eaa;
  --_1th2mrqv: #c6acf5;
  --_1th2mrqw: 1px;
  --_1th2mrqx: 2px;
  --_1th2mrqy: 3px;
  --_1th2mrqz: 400px;
  --_1th2mrq10: 660px;
  --_1th2mrq11: 940px;
  --_1th2mrq12: 1280px;
  --_1th2mrq13: #e60278;
  --_1th2mrq14: #f8b1dc;
  --_1th2mrq15: #723d02;
  --_1th2mrq16: #fee384;
  --_1th2mrq17: #b91e1e;
  --_1th2mrq18: #fb999a;
  --_1th2mrq19: #4964e9;
  --_1th2mrq1a: #9fb0f5;
  --_1th2mrq1b: #1d559d;
  --_1th2mrq1c: #98c9f1;
  --_1th2mrq1d: #4964e9;
  --_1th2mrq1f: #9fb0f5;
  --_1th2mrq1e: #4964e9;
  --_1th2mrq1g: #512eaa;
  --_1th2mrq1h: #c6acf5;
  --_1th2mrq1i: #2e3849;
  --_1th2mrq1j: #fff;
  --_1th2mrq1k: #12784f;
  --_1th2mrq1l: #8bdec5;
  --_1th2mrq1m: #512eaa;
  --_1th2mrq1n: #c6acf5;
  --_1th2mrq1o: #f57c00;
  --_1th2mrq1p: #5a6881;
  --_1th2mrq1q: rgba(255, 255, 255, 0.65);
  --_1th2mrq1r: #f7f8fb;
  --_1th2mrq1s: #0e131b;
  --_1th2mrq1t: #0d3880;
  --_1th2mrq1u: #e60278;
  --_1th2mrq1v: #cd026b;
  --_1th2mrq1w: #fd0585;
  --_1th2mrq1x: #feeffa;
  --_1th2mrq1y: #fdd7f3;
  --_1th2mrq1z: #fde3f6;
  --_1th2mrq20: #fdc221;
  --_1th2mrq21: #fef8de;
  --_1th2mrq22: #b91e1e;
  --_1th2mrq23: #a31a1a;
  --_1th2mrq24: #db1616;
  --_1th2mrq25: #ffe3e2;
  --_1th2mrq26: #fef3f3;
  --_1th2mrq27: #fcdbdb;
  --_1th2mrq28: #fde7e7;
  --_1th2mrq29: #4964e9;
  --_1th2mrq2a: #3251e6;
  --_1th2mrq2b: #5975ff;
  --_1th2mrq2c: #f4f6fe;
  --_1th2mrq2d: #dde3fc;
  --_1th2mrq2e: #e8ecfd;
  --_1th2mrq2f: #1d559d;
  --_1th2mrq2g: #e3f2fb;
  --_1th2mrq2h: #2e3849;
  --_1th2mrq2i: #242c39;
  --_1th2mrq2j: #384459;
  --_1th2mrq2k: #eaecf1;
  --_1th2mrq2l: #f7f8fb;
  --_1th2mrq2m: #e6e9f3;
  --_1th2mrq2n: #eff1f7;
  --_1th2mrq2o: #12784f;
  --_1th2mrq2p: #e2f7f1;
  --_1th2mrq2q: #512eaa;
  --_1th2mrq2r: #f1e8fd;
  --_1th2mrq2s: #fff;
  --_1th2mrq2t: #1c2330;
  --_1th2mrq2u: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --_1th2mrq2v: 1456;
  --_1th2mrq2w: 1900;
  --_1th2mrq2x: -500;
  --_1th2mrq2y: 0;
  --_1th2mrq2z: 2048;
  --_1th2mrq30: 12px;
  --_1th2mrq31: 20px;
  --_1th2mrq32: 8.5313px;
  --_1th2mrq33: -0.4642em;
  --_1th2mrq34: -0.4915em;
  --_1th2mrq35: 12px;
  --_1th2mrq36: 20px;
  --_1th2mrq37: 8.5313px;
  --_1th2mrq38: -0.4642em;
  --_1th2mrq39: -0.4915em;
  --_1th2mrq3a: 14px;
  --_1th2mrq3b: 20px;
  --_1th2mrq3c: 9.9531px;
  --_1th2mrq3d: -0.3451em;
  --_1th2mrq3e: -0.3725em;
  --_1th2mrq3f: 14px;
  --_1th2mrq3g: 20px;
  --_1th2mrq3h: 9.9531px;
  --_1th2mrq3i: -0.3451em;
  --_1th2mrq3j: -0.3725em;
  --_1th2mrq3k: 16px;
  --_1th2mrq3l: 24px;
  --_1th2mrq3m: 11.375px;
  --_1th2mrq3n: -0.3809em;
  --_1th2mrq3o: -0.4082em;
  --_1th2mrq3p: 16px;
  --_1th2mrq3q: 24px;
  --_1th2mrq3r: 11.375px;
  --_1th2mrq3s: -0.3809em;
  --_1th2mrq3t: -0.4082em;
  --_1th2mrq3u: 18px;
  --_1th2mrq3v: 28px;
  --_1th2mrq3w: 12.7969px;
  --_1th2mrq3x: -0.4086em;
  --_1th2mrq3y: -0.436em;
  --_1th2mrq3z: 18px;
  --_1th2mrq40: 28px;
  --_1th2mrq41: 12.7969px;
  --_1th2mrq42: -0.4086em;
  --_1th2mrq43: -0.436em;
  --_1th2mrq44: 400;
  --_1th2mrq45: 500;
  --_1th2mrq46: 700;
  --_1th2mrq47: 28px;
  --_1th2mrq48: 36px;
  --_1th2mrq49: 19.9063px;
  --_1th2mrq4a: -0.2737em;
  --_1th2mrq4b: -0.3011em;
  --_1th2mrq4c: 42px;
  --_1th2mrq4d: 44px;
  --_1th2mrq4e: 29.8594px;
  --_1th2mrq4f: -0.1547em;
  --_1th2mrq4g: -0.182em;
  --_1th2mrq4h: 21px;
  --_1th2mrq4i: 32px;
  --_1th2mrq4j: 14.9297px;
  --_1th2mrq4k: -0.3928em;
  --_1th2mrq4l: -0.4201em;
  --_1th2mrq4m: 28px;
  --_1th2mrq4n: 36px;
  --_1th2mrq4o: 19.9063px;
  --_1th2mrq4p: -0.2737em;
  --_1th2mrq4q: -0.3011em;
  --_1th2mrq4r: 21px;
  --_1th2mrq4s: 28px;
  --_1th2mrq4t: 14.9297px;
  --_1th2mrq4u: -0.2975em;
  --_1th2mrq4v: -0.3249em;
  --_1th2mrq4w: 21px;
  --_1th2mrq4x: 28px;
  --_1th2mrq4y: 14.9297px;
  --_1th2mrq4z: -0.2975em;
  --_1th2mrq50: -0.3249em;
  --_1th2mrq51: 18px;
  --_1th2mrq52: 28px;
  --_1th2mrq53: 12.7969px;
  --_1th2mrq54: -0.4086em;
  --_1th2mrq55: -0.436em;
  --_1th2mrq56: 18px;
  --_1th2mrq57: 28px;
  --_1th2mrq58: 12.7969px;
  --_1th2mrq59: -0.4086em;
  --_1th2mrq5a: -0.436em;
  --_1th2mrq5b: 400;
  --_1th2mrq5c: 500;
  --_1th2mrq5d: 24px;
  --_1th2mrq5e: 20px;
  --_1th2mrq5f: transform 0.125s ease, opacity 0.125s ease;
  --_1th2mrq5g: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1th2mrq5h: scale(0.95);
  --_1th2mrq5i: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --_1th2mrq5j: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --_1th2mrq5k: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
.tilamk0 {
  font-family: var(--_1th2mrq2u);
}
.tilamk1 {
  font-weight: var(--_1th2mrq44);
}
.tilamk2 {
  font-weight: var(--_1th2mrq45);
}
.tilamk3 {
  font-weight: var(--_1th2mrq46);
}
.tilamk4 {
  --_1d0g9qk0: var(--_1th2mrq30);
  --_1d0g9qk1: var(--_1th2mrq31);
  --_1d0g9qk2: var(--_1th2mrq33);
  --_1d0g9qk3: var(--_1th2mrq34);
}
.tilamk7 {
  --_1d0g9qk0: var(--_1th2mrq3a);
  --_1d0g9qk1: var(--_1th2mrq3b);
  --_1d0g9qk2: var(--_1th2mrq3d);
  --_1d0g9qk3: var(--_1th2mrq3e);
}
.tilamka {
  --_1d0g9qk0: var(--_1th2mrq3k);
  --_1d0g9qk1: var(--_1th2mrq3l);
  --_1d0g9qk2: var(--_1th2mrq3n);
  --_1d0g9qk3: var(--_1th2mrq3o);
}
.tilamkd {
  --_1d0g9qk0: var(--_1th2mrq3u);
  --_1d0g9qk1: var(--_1th2mrq3v);
  --_1d0g9qk2: var(--_1th2mrq3x);
  --_1d0g9qk3: var(--_1th2mrq3y);
}
.tilamkg {
  font-size: var(--_1th2mrq30);
  line-height: var(--_1th2mrq31);
}
.tilamkh {
  font-size: var(--_1th2mrq3a);
  line-height: var(--_1th2mrq3b);
}
.tilamki {
  font-size: var(--_1th2mrq3k);
  line-height: var(--_1th2mrq3l);
}
.tilamkj {
  font-size: var(--_1th2mrq3u);
  line-height: var(--_1th2mrq3v);
}
.tilamkk {
  font-weight: var(--_1th2mrq5b);
}
.tilamkl {
  font-weight: var(--_1th2mrq5c);
}
.tilamkm {
  --_1d0g9qk0: var(--_1th2mrq47);
  --_1d0g9qk1: var(--_1th2mrq48);
  --_1d0g9qk2: var(--_1th2mrq4a);
  --_1d0g9qk3: var(--_1th2mrq4b);
}
.tilamkp {
  --_1d0g9qk0: var(--_1th2mrq4h);
  --_1d0g9qk1: var(--_1th2mrq4i);
  --_1d0g9qk2: var(--_1th2mrq4k);
  --_1d0g9qk3: var(--_1th2mrq4l);
}
.tilamks {
  --_1d0g9qk0: var(--_1th2mrq4r);
  --_1d0g9qk1: var(--_1th2mrq4s);
  --_1d0g9qk2: var(--_1th2mrq4u);
  --_1d0g9qk3: var(--_1th2mrq4v);
}
.tilamkv {
  --_1d0g9qk0: var(--_1th2mrq51);
  --_1d0g9qk1: var(--_1th2mrq52);
  --_1d0g9qk2: var(--_1th2mrq54);
  --_1d0g9qk3: var(--_1th2mrq55);
}
html:not(.tqa109z) .tilamk18 {
  --tilamky: var(--_1th2mrq17);
  --tilamkz: var(--_1th2mrq15);
  --tilamk10: var(--_1th2mrq1b);
  --tilamk11: var(--_1th2mrq1m);
  --tilamk12: var(--_1th2mrq1k);
  --tilamk13: var(--_1th2mrq13);
  --tilamk14: var(--_1th2mrq19);
  --tilamk15: var(--_1th2mrq1i);
  --tilamk16: var(--_1th2mrq1p);
  --tilamk17: var(--_1th2mrq1d);
}
html:not(.tqa109z) .tilamk19 {
  --tilamky: var(--_1th2mrq18);
  --tilamkz: var(--_1th2mrq16);
  --tilamk10: var(--_1th2mrq1c);
  --tilamk11: var(--_1th2mrq1n);
  --tilamk12: var(--_1th2mrq1l);
  --tilamk13: var(--_1th2mrq14);
  --tilamk14: var(--_1th2mrq1a);
  --tilamk15: var(--_1th2mrq1j);
  --tilamk16: var(--_1th2mrq1q);
  --tilamk17: var(--_1th2mrq1f);
}
html.tqa109z .tilamk1a {
  --tilamky: var(--_1th2mrq17);
  --tilamkz: var(--_1th2mrq15);
  --tilamk10: var(--_1th2mrq1b);
  --tilamk11: var(--_1th2mrq1m);
  --tilamk12: var(--_1th2mrq1k);
  --tilamk13: var(--_1th2mrq13);
  --tilamk14: var(--_1th2mrq19);
  --tilamk15: var(--_1th2mrq1i);
  --tilamk16: var(--_1th2mrq1p);
  --tilamk17: var(--_1th2mrq1d);
}
html.tqa109z .tilamk1b {
  --tilamky: var(--_1th2mrq18);
  --tilamkz: var(--_1th2mrq16);
  --tilamk10: var(--_1th2mrq1c);
  --tilamk11: var(--_1th2mrq1n);
  --tilamk12: var(--_1th2mrq1l);
  --tilamk13: var(--_1th2mrq14);
  --tilamk14: var(--_1th2mrq1a);
  --tilamk15: var(--_1th2mrq1j);
  --tilamk16: var(--_1th2mrq1q);
  --tilamk17: var(--_1th2mrq1f);
}
html:not(.tqa109z) .tilamk1c,
html:not(.tqa109z) .tilamk1d,
html:not(.tqa109z) .tilamk1e,
html:not(.tqa109z) .tilamk1f {
  --tilamk15: var(--tilamky);
}
html:not(.tqa109z) .tilamk1g,
html:not(.tqa109z) .tilamk1h {
  --tilamk15: var(--tilamkz);
}
html:not(.tqa109z) .tilamk1i {
  --tilamk15: var(--tilamk12);
}
html:not(.tqa109z) .tilamk1j {
  --tilamk15: var(--tilamk10);
}
html:not(.tqa109z) .tilamk1k {
  --tilamk15: var(--tilamk11);
}
html.tqa109z .tilamk1l,
html.tqa109z .tilamk1m,
html.tqa109z .tilamk1n,
html.tqa109z .tilamk1o {
  --tilamk15: var(--tilamky);
}
html.tqa109z .tilamk1p,
html.tqa109z .tilamk1q {
  --tilamk15: var(--tilamkz);
}
html.tqa109z .tilamk1r {
  --tilamk15: var(--tilamk12);
}
html.tqa109z .tilamk1s {
  --tilamk15: var(--tilamk10);
}
html.tqa109z .tilamk1t {
  --tilamk15: var(--tilamk11);
}
.tilamk1u {
  color: var(--tilamky);
}
.tilamk1v {
  color: var(--tilamkz);
}
.tilamk1w {
  color: var(--tilamk10);
}
.tilamk1x {
  color: var(--tilamk11);
}
.tilamk1y {
  color: var(--tilamk12);
}
.tilamk1z {
  color: var(--tilamk13);
}
.tilamk20 {
  color: var(--tilamk14);
}
.tilamk21 {
  color: var(--tilamk15);
}
.tilamk22 {
  color: var(--tilamk16);
}
.tilamk23 {
  color: var(--tilamk17);
}
.tilamk24 {
  padding-bottom: calc((var(--_1th2mrq8) - var(--_1th2mrq31)) / 2);
  padding-top: calc((var(--_1th2mrq8) - var(--_1th2mrq31)) / 2);
}
.tilamk25 {
  padding-bottom: calc((var(--_1th2mrq8) - var(--_1th2mrq3b)) / 2);
  padding-top: calc((var(--_1th2mrq8) - var(--_1th2mrq3b)) / 2);
}
.tilamk26 {
  padding-bottom: calc((var(--_1th2mrq8) - var(--_1th2mrq3l)) / 2);
  padding-top: calc((var(--_1th2mrq8) - var(--_1th2mrq3l)) / 2);
}
.tilamk27 {
  padding-bottom: calc((var(--_1th2mrq8) - var(--_1th2mrq3v)) / 2);
  padding-top: calc((var(--_1th2mrq8) - var(--_1th2mrq3v)) / 2);
}
@media screen and (min-width: 740px) {
  .tilamk4 {
    --_1d0g9qk0: var(--_1th2mrq35);
    --_1d0g9qk1: var(--_1th2mrq36);
    --_1d0g9qk2: var(--_1th2mrq38);
    --_1d0g9qk3: var(--_1th2mrq39);
  }
  .tilamk7 {
    --_1d0g9qk0: var(--_1th2mrq3f);
    --_1d0g9qk1: var(--_1th2mrq3g);
    --_1d0g9qk2: var(--_1th2mrq3i);
    --_1d0g9qk3: var(--_1th2mrq3j);
  }
  .tilamka {
    --_1d0g9qk0: var(--_1th2mrq3p);
    --_1d0g9qk1: var(--_1th2mrq3q);
    --_1d0g9qk2: var(--_1th2mrq3s);
    --_1d0g9qk3: var(--_1th2mrq3t);
  }
  .tilamkd {
    --_1d0g9qk0: var(--_1th2mrq3z);
    --_1d0g9qk1: var(--_1th2mrq40);
    --_1d0g9qk2: var(--_1th2mrq42);
    --_1d0g9qk3: var(--_1th2mrq43);
  }
  .tilamkg {
    font-size: var(--_1th2mrq35);
    line-height: var(--_1th2mrq36);
  }
  .tilamkh {
    font-size: var(--_1th2mrq3f);
    line-height: var(--_1th2mrq3g);
  }
  .tilamki {
    font-size: var(--_1th2mrq3p);
    line-height: var(--_1th2mrq3q);
  }
  .tilamkj {
    font-size: var(--_1th2mrq3z);
    line-height: var(--_1th2mrq40);
  }
  .tilamkm {
    --_1d0g9qk0: var(--_1th2mrq4c);
    --_1d0g9qk1: var(--_1th2mrq4d);
    --_1d0g9qk2: var(--_1th2mrq4f);
    --_1d0g9qk3: var(--_1th2mrq4g);
  }
  .tilamkp {
    --_1d0g9qk0: var(--_1th2mrq4m);
    --_1d0g9qk1: var(--_1th2mrq4n);
    --_1d0g9qk2: var(--_1th2mrq4p);
    --_1d0g9qk3: var(--_1th2mrq4q);
  }
  .tilamks {
    --_1d0g9qk0: var(--_1th2mrq4w);
    --_1d0g9qk1: var(--_1th2mrq4x);
    --_1d0g9qk2: var(--_1th2mrq4z);
    --_1d0g9qk3: var(--_1th2mrq50);
  }
  .tilamkv {
    --_1d0g9qk0: var(--_1th2mrq56);
    --_1d0g9qk1: var(--_1th2mrq57);
    --_1d0g9qk2: var(--_1th2mrq59);
    --_1d0g9qk3: var(--_1th2mrq5a);
  }
  .tilamk24 {
    padding-bottom: calc((var(--_1th2mrq8) - var(--_1th2mrq36)) / 2);
    padding-top: calc((var(--_1th2mrq8) - var(--_1th2mrq36)) / 2);
  }
  .tilamk25 {
    padding-bottom: calc((var(--_1th2mrq8) - var(--_1th2mrq3g)) / 2);
    padding-top: calc((var(--_1th2mrq8) - var(--_1th2mrq3g)) / 2);
  }
  .tilamk26 {
    padding-bottom: calc((var(--_1th2mrq8) - var(--_1th2mrq3q)) / 2);
    padding-top: calc((var(--_1th2mrq8) - var(--_1th2mrq3q)) / 2);
  }
  .tilamk27 {
    padding-bottom: calc((var(--_1th2mrq8) - var(--_1th2mrq40)) / 2);
    padding-top: calc((var(--_1th2mrq8) - var(--_1th2mrq40)) / 2);
  }
}
._1qfsrc56 {
  background: var(--_1qfsrc50);
}
._1qfsrc57 {
  background: var(--_1qfsrc51);
}
._1qfsrc58 {
  background: var(--_1qfsrc52);
}
._1qfsrc59 {
  background: var(--_1qfsrc53);
}
._1qfsrc5a {
  background: var(--_1qfsrc54);
}
._1qfsrc5b {
  background: var(--_1qfsrc55);
}
html:not(.tqa109z) ._1qfsrc5c {
  --_1qfsrc50: var(--_1th2mrqu);
  --_1qfsrc51: var(--_1th2mrqn);
  --_1qfsrc52: var(--_1th2mrqs);
  --_1qfsrc53: var(--_1th2mrqf);
  --_1qfsrc54: var(--_1th2mrqh);
  --_1qfsrc55: var(--_1th2mrql);
}
html:not(.tqa109z) ._1qfsrc5d {
  --_1qfsrc50: var(--_1th2mrqv);
  --_1qfsrc51: var(--_1th2mrqo);
  --_1qfsrc52: var(--_1th2mrqt);
  --_1qfsrc53: var(--_1th2mrqg);
  --_1qfsrc54: var(--_1th2mrqi);
  --_1qfsrc55: var(--_1th2mrqm);
}
html.tqa109z ._1qfsrc5e {
  --_1qfsrc50: var(--_1th2mrqu);
  --_1qfsrc51: var(--_1th2mrqn);
  --_1qfsrc52: var(--_1th2mrqs);
  --_1qfsrc53: var(--_1th2mrqf);
  --_1qfsrc54: var(--_1th2mrqh);
  --_1qfsrc55: var(--_1th2mrql);
}
html.tqa109z ._1qfsrc5f {
  --_1qfsrc50: var(--_1th2mrqv);
  --_1qfsrc51: var(--_1th2mrqo);
  --_1qfsrc52: var(--_1th2mrqt);
  --_1qfsrc53: var(--_1th2mrqg);
  --_1qfsrc54: var(--_1th2mrqi);
  --_1qfsrc55: var(--_1th2mrqm);
}
._1qfsrc5g {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1qfsrc5h {
  width: var(--_1th2mrqc);
}
.hdx5ep1 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /*
object-assign
(c) Sindre Sorhus
@license MIT
*/

/** @license React v0.20.1
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.1
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.1
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.1
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script defer
            src="scripts[0]"
    >
    </script>
    <link href="styles[0]"
          rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__tqa109z,html.sprinkles_darkMode__tqa109z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_default__144ilsa0 typography_lightModeTone_light__tilamk18 typography_darkModeTone_dark__tilamk1b">
+        <div class="reset_base__17mn8h20 sprinkles_paddingBottom_gutter_mobile__tqa10976 sprinkles_paddingTop_gutter_mobile__tqa10966 sprinkles_paddingLeft_gutter_mobile__tqa10996 sprinkles_paddingRight_gutter_mobile__tqa10986 sprinkles_position_relative_mobile__tqa1095a typography_lightModeTone_light__tilamk18 typography_darkModeTone_dark__tilamk1b sprinkles_background_surface_lightMode__tqa10932 sprinkles_background_surfaceDark_darkMode__tqa10935">
+          <span class="reset_base__17mn8h20 sprinkles_display_block_mobile__tqa1094u typography_fontFamily__tilamk0 typography_fontWeight_regular__tilamk1 typography_tone_neutral__tilamk21 capsize_capsizeStyle__1d0g9qk4 typography_textSize_large__tilamkd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
